Adding the service and footer section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,15 @@
 }
 
 /* =====================
+  service Start
+========================*/
+.service-img {
+  max-width: 78px;
+  max-height: 82px;
+  height: auto;
+}
+
+/* =====================
   Media Queries
 ========================*/
 @media (max-width: 992px) {
